Bug 485670 - Konqueror crashes upon clicking a bookmark folder from the bookmark toolbar
Summary: Konqueror crashes upon clicking a bookmark folder from the bookmark toolbar
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: bookmarks (other bugs)
Version First Reported In: 24.02.2
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-17 11:11 UTC by Cameron Tanner
Modified: 2024-04-24 20:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cameron Tanner 2024-04-17 11:11:43 UTC
SUMMARY

Just as the title says, konqueror crashes with a segfault when a bookmark folder listed in the toolbar is clicked.

STEPS TO REPRODUCE
1. Open konqueror
2. Create a bookmark folder and add some bookmarks to it
3. Go to Settings-->Toolbars shown and turn enable bookmark toolbar to be shown
4. Click a bookmark folder from the bookmark toolbar.

Steps 2 and 3 can be skipped if a bookmark folder already exists and the toolbar is shown.
Bookmark folders and their contents can be accessed without a crash from the application Bookmark menu.

OBSERVED RESULT

Konqueror segfaults.

EXPECTED RESULT

Bookmark folder opens to show bookmarks contained within it.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 6.0.3
(available in About System)
KDE Plasma Version: 6.03
KDE Frameworks Version: 6.1
Qt Version: 6.7

ADDITIONAL INFORMATION

KCrash: Application 'konqueror' crashing... crashRecursionCounter = 2
Segmentation fault (core dumped)

Core available upon request.
Comment 1 Bug Janitor Service 2024-04-21 08:56:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/321
Comment 2 Stefano Crocco 2024-04-24 20:43:04 UTC
Git commit 791a14f78a693cd923b0056ad50184a18b24fc03 by Stefano Crocco.
Committed on 24/04/2024 at 20:42.
Pushed by stefanocrocco into branch 'master'.

Fix crash when clicking on bookmark toolbar and allow configuring add bookmark shortcut

M  +1    -1    src/konqbookmarkbar.cpp
M  +0    -1    src/konqbookmarkbar.h
M  +1    -3    src/konqbookmarkmenu.cpp
M  +3    -6    src/konqbookmarkmenu.h
M  +3    -10   src/konqmainwindow.cpp
M  +0    -1    src/konqmainwindow.h

https://invent.kde.org/network/konqueror/-/commit/791a14f78a693cd923b0056ad50184a18b24fc03
Comment 3 Stefano Crocco 2024-04-24 20:48:33 UTC
Git commit e908b1ead2a971b7b04c32416d1b1fb684b9e047 by Stefano Crocco.
Committed on 24/04/2024 at 20:48.
Pushed by stefanocrocco into branch 'release/24.05'.

Fix crash when clicking on bookmark toolbar and allow configuring add bookmark shortcut


(cherry picked from commit 791a14f78a693cd923b0056ad50184a18b24fc03)

25b41598 Fix crash when clicking on bookmark toolbar and allow configuring add bookmark shortcut

M  +1    -1    src/konqbookmarkbar.cpp
M  +0    -1    src/konqbookmarkbar.h
M  +1    -3    src/konqbookmarkmenu.cpp
M  +3    -6    src/konqbookmarkmenu.h
M  +3    -10   src/konqmainwindow.cpp
M  +0    -1    src/konqmainwindow.h

https://invent.kde.org/network/konqueror/-/commit/e908b1ead2a971b7b04c32416d1b1fb684b9e047