Fix crash when clicking on bookmark toolbar and allow configuring add bookmark shortcut

BUG: 485670


(cherry picked from commit 791a14f78a693cd923b0056ad50184a18b24fc03)

25b41598 Fix crash when clicking on bookmark toolbar and allow configuring add bookmark shortcut